# looplet-tg-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: .gitkeep
looplet/: __init__.py  __main__.py  bot.py  commands.py  config.py
looplet/api/: __init__.py  base.py  jokes.py  trivia.py  weather.py  xkcd.py
looplet/data/: __init__.py  quotes.txt
looplet/storage/: __init__.py  db.py  reminders.py
looplet/utils/: __init__.py  choices.py  cooldowns.py  dice.py  duration.py  quotes.py
tests/: test_choices.py  test_cooldowns.py  test_dice.py  test_duration.py  test_reminders.py
